fix tooltip z-index

--- a/packages/frontend/src/css/tooltip.scss
+++ b/packages/frontend/src/css/tooltip.scss
@@ -1,6 +1,7 @@
 /* setup tooltips */
 .tooltip {
   position: relative;
+  z-index: 10;
 }
 .tooltip:before,
 .tooltip:after {
